refactores to crud ops